Recreate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-versao
spec:
  replicas: 10
  selector:
    matchLabels:
      app: api-versao
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
      labels:
        app: api-versao
    spec:
      containers:
        - name: api-versao
          image: kubedevio/api-versao:v2
          resources: {}
          ports:
            - containerPort: 8080
