Recreate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api-versao
spec:
  selector:
    app: api-versao
  ports:
    - port: 80
      targetPort: 8080
  #type: LoadBalancer
